# Musnake

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  MU_declaration.h  MU_element.h  MU_file.h  MU_flame.h  MU_food.h  MU_game.h  MU_gamestruct.h  MU_grid.h  MU_loader.h  MU_note.h  MU_path.h  MU_snake.h  MU_time.h  MU_toaster.h  Musnake.sln  Musnake.vcxproj  Musnake.vcxproj.filters  README.md  diary.md  main.cpp
data/: list.mu  maps.mu  save.mu
doc/: diary.md  document.md
image/: body.psd  char.psd  hp.psd  snake_00t1.psd  snake_0_body.psd  snake_0_head.psd  snake_0_tail.psd  tail.psd
level/: list.mu
level/001/: notes.mu  toast.mu
level/002/: notes.mu  toast.mu
level/a01/: notes.mu
level/a02/: notes.mu  toast.mu
level/b01/: map.mu  notes.mu  toast.mu
level/b02/: map.mu  notes.mu  toast.mu
level/b03/: map.mu  notes.mu  toast.mu
level/b04/: notes.mu  toast.mu
level/b05/: notes.mu  toast.mu
level/k01/: map.mu  notes.mu  toast.mu
level/k02/: notes.mu  toast.mu
level/m02/: map.mu  toast.mu
level/m03/: toast.mu
level/m04/: toast.mu
level/z01/: map.mu  notes.mu  toast.mu
level/金蛇狂舞/: notes.mu
map/: maps.mu
maps/: 1.mu  2.mu  3.mu  4.mu  7.mu  8.mu  milk.mu  rip.mu
tools/: mume.py  mure.py
